--- a/View/page/share/photowaitList.html
+++ b/View/page/share/photowaitList.html
@@ -14,47 +14,55 @@
 	<link rel="stylesheet" href="../../css/photo.css" media="all" />
 </head>
 <body class="childrenBody">
-	<blockquote class="layui-elem-quote photo_search">
-		<div class="layui-inline">
-		    <div class="layui-input-inline">
-		    	<input type="text" value="" placeholder="请输入关键字" class="layui-input search_input">
-		    </div>
-		    <a class="layui-btn search_btn">查询</a>
+<blockquote class="layui-elem-quote photo_search">
+	<div class="layui-inline">
+		<div class="layui-input-inline">
+			<input readonly type="text" class="layui-input" id="start" placeholder="时间" lay-key="1">
 		</div>
-		<div class="layui-inline">
-			<a class="layui-btn layui-btn-warm showAll_btn">显示全部</a>
-		</div>
-		<div class="layui-inline">
-			<a class="layui-btn layui-btn-danger batchDel">批量删除</a>
-		</div>
-	</blockquote>
-	<div class="layui-form photo_list">
-	  	<table class="layui-table" lay-data="{initSort:{field:'time', type:'desc'}}">
-		    <colgroup>
-				<col width="2%">
-				<col>
-				<col width="12%">
-				<col width="12%">
-				<col width="12%">
-				<col width="12%">
-				<col width="25%">
-		    </colgroup>
-		    <thead>
-				<tr>
-					<th><input type="checkbox" name="" lay-skin="primary" lay-filter="allChoose" id="allChoose"></th>
-					<th style="text-align:left;">微信号</th>
-					<th>描述</th>
-					<th>时间</th>
-					<th>审核状态</th>
-					<th>操作人</th>
-					<th>操作</th>
-				</tr> 
-		    </thead>
-		    <tbody class="photo_content"></tbody>
-		</table>
 	</div>
-	<div id="page"></div>
-	<script type="text/javascript" src="../../layui/layui.js"></script>
-	<script type="text/javascript" src="photowaitList.js"></script>
+	<div class="layui-inline">
+		<div class="layui-input-inline">
+			<input type="text" value="" placeholder="请输入关键字" class="layui-input search_input">
+		</div>
+		<a class="layui-btn search_btn">查询</a>
+	</div>
+	<div class="layui-inline">
+		<a class="layui-btn layui-btn-warm showAll_btn">显示全部</a>
+	</div>
+	<div class="layui-inline">
+		<a class="layui-btn layui-btn-danger batchDel">批量删除</a>
+	</div>
+</blockquote>
+<div class="layui-form photo_list">
+	<table class="layui-table" lay-data="{initSort:{field:'time', type:'desc'}}">
+		<colgroup>
+			<col width="50">
+			<col>
+			<col width="20%">
+			<col width="10%">
+			<col width="10%">
+			<col width="10%">
+			<col width="10%">
+			<col width="25%">
+		</colgroup>
+		<thead>
+		<tr>
+			<th><input type="checkbox" name="" lay-skin="primary" lay-filter="allChoose" id="allChoose"></th>
+			<th style="text-align:left;">微信号</th>
+			<th>描述</th>
+			<th>时间</th>
+			<th>审核状态</th>
+			<th>审核人</th>
+			<th>置顶</th>
+			<th>操作</th>
+		</tr>
+		</thead>
+		<tbody class="photo_content"></tbody>
+	</table>
+</div>
+<div id="page"></div>
+<script type="text/javascript" src="../../laydate/laydate.js"></script>
+<script type="text/javascript" src="../../layui/layui.js"></script>
+<script type="text/javascript" src="photowaitList.js"></script>
 </body>
 </html>
