--- a/View/page/share/photoList.html
+++ b/View/page/share/photoList.html
@@ -48,7 +48,7 @@
 		    <thead>
 				<tr>
 					<th><input type="checkbox" name="" lay-skin="primary" lay-filter="allChoose" id="allChoose"></th>
-					<th style="text-align:left;">微信号</th>
+					<th style="text-align:left;">昵称</th>
 					<th>描述</th>
 					<th>时间</th>
 					<th>审核状态</th>
