--- a/View/page/admin/adminAdd.html
+++ b/View/page/admin/adminAdd.html
@@ -21,9 +21,14 @@
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">昵称</label>
-			<div class="layui-input-block">
-				<input type="text" name="nickname" class="layui-input" lay-verify="required|nickname" placeholder="请输入昵称">
+			<div class="layui-input-inline">
+				<select name="nickname" class="nickname" lay-filter="browseLook">
+					<option value="0">-请选择-</option>
+				</select>
 			</div>
+			<!--<div class="layui-input-block">
+				<input type="text" name="nickname" class="layui-input" lay-verify="required|nickname" placeholder="请输入昵称">
+			</div>-->
 		</div>
 		<div class="layui-form-item">
 			<div class="layui-inline">
@@ -49,7 +54,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">邮箱</label>
 			<div class="layui-input-block">
-				<input type="text" name="email" class="layui-input" lay-verify="required|email|checkEmail" placeholder="请输入邮箱">
+				<input type="text" name="email" class="layui-input" lay-verify="email|checkEmail" placeholder="请输入邮箱">
 			</div>
 		</div>
 		<div class="layui-form-item">
